# hearcode

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTEGRATE.md  LICENSE  README.md  hooks.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
hearcode/: __init__.py  cli.py
hearcode/adapters/announcer/: null_announcer.py  say_announcer.py
hearcode/adapters/clock/: system_clock.py
hearcode/adapters/http/: controller.py
hearcode/adapters/mixer/: arrangement.py  null_mixer.py  sounddevice_mixer.py  stem_pack.py
hearcode/adapters/recap/: recap_renderer.py  waveform_export.py
hearcode/adapters/session_log/: jsonl_session_log.py  null_session_log.py
hearcode/adapters/ui/: __init__.py  menubar.py
hearcode/domain/entities/: events.py  intent.py  musical_state.py  session.py  session_entry.py
hearcode/domain/ports/: announcer.py  audio.py  clock.py  session_log.py
hearcode/domain/use_cases/: handle_event.py  mark_idle.py
hearcode/infrastructure/: config.py  container.py  daemon.py  installer.py  menu_app.py  server.py
tools/: gen_stems.py
